--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ lazy_static = "1.4.0"
 log = "0.4.14"
 simple_logger = "2.1.0"
 clap = { version = "3.0.13", features = ["derive"] }
+colored = "2"
