--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ simple_logger = "2.1.0"
 clap = { version = "3.0.13", features = ["derive"] }
 colored = "2"
 itertools = "0.11.0"
+indexmap = "2.0.0"
