--- a/liquidhaskell-proofs/package.yaml
+++ b/liquidhaskell-proofs/package.yaml
@@ -1,6 +1,6 @@
 name:                liquidhaskell-proofs
 version:             0.1.0.0
-github:              "githubuser/liquidhaskell-proofs"
+github:              "cole-k/cyclegg"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -8,7 +8,6 @@ copyright:           "2023 Author name here"
 
 extra-source-files:
 - README.md
-- CHANGELOG.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
