--- a/liquidhaskell-proofs/liquidhaskell-proofs.cabal
+++ b/liquidhaskell-proofs/liquidhaskell-proofs.cabal
@@ -7,8 +7,8 @@ cabal-version: 1.12
 name:           liquidhaskell-proofs
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/liquidhaskell-proofs#readme>
-homepage:       https://github.com/githubuser/liquidhaskell-proofs#readme
-bug-reports:    https://github.com/githubuser/liquidhaskell-proofs/issues
+homepage:       https://github.com/cole-k/cyclegg#readme
+bug-reports:    https://github.com/cole-k/cyclegg/issues
 author:         Author name here
 maintainer:     example@example.com
 copyright:      2023 Author name here
@@ -16,21 +16,80 @@ license:        BSD3
 build-type:     Simple
 extra-source-files:
     README.md
-    CHANGELOG.md
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/liquidhaskell-proofs
+  location: https://github.com/cole-k/cyclegg
 
 library
   exposed-modules:
-      Prop50
+      Prop01NoCyclic
+      Prop02NoCyclic
+      Prop03NoCyclic
+      Prop04NoCyclic
+      Prop06NoCyclic
+      Prop07NoCyclic
+      Prop08NoCyclic
+      Prop09NoCyclic
+      Prop10NoCyclic
+      Prop11NoCyclic
+      Prop12NoCyclic
+      Prop13NoCyclic
+      Prop14NoCyclic
+      Prop15NoCyclic
+      Prop17NoCyclic
+      Prop18NoCyclic
+      Prop19NoCyclic
+      Prop21NoCyclic
+      Prop22NoCyclic
+      Prop23NoCyclic
+      Prop24NoCyclic
+      Prop25NoCyclic
+      Prop28NoCyclic
+      Prop29NoCyclic
+      Prop31NoCyclic
+      Prop32NoCyclic
+      Prop33NoCyclic
+      Prop34NoCyclic
+      Prop35NoCyclic
+      Prop36NoCyclic
+      Prop37NoCyclic
+      Prop38NoCyclic
+      Prop39NoCyclic
+      Prop40NoCyclic
+      Prop41NoCyclic
+      Prop42NoCyclic
+      Prop43NoCyclic
+      Prop44NoCyclic
+      Prop45NoCyclic
+      Prop46NoCyclic
+      Prop49NoCyclic
       Prop50NoCyclic
+      Prop51NoCyclic
+      Prop52NoCyclic
+      Prop55NoCyclic
+      Prop56NoCyclic
+      Prop57NoCyclic
+      Prop58NoCyclic
+      Prop61NoCyclic
+      Prop64NoCyclic
+      Prop67NoCyclic
+      Prop75NoCyclic
+      Prop79NoCyclic
+      Prop80NoCyclic
+      Prop82NoCyclic
+      Prop83NoCyclic
+      Prop84NoCyclic
+      Prop86NoCyclic
+      Prop87NoCyclic
+      Prop88NoCyclic
+      Prop89NoCyclic
+      Prop90NoCyclic
   other-modules:
       Paths_liquidhaskell_proofs
   hs-source-dirs:
       src
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=LiquidHaskell -fkeep-going
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=LiquidHaskell -Wno-unused-matches -Wmissing-export-lists -fkeep-going
   build-depends:
       base >=4.7 && <5
     , liquid-prelude
@@ -44,7 +103,7 @@ test-suite liquidhaskell-proofs-test
       Paths_liquidhaskell_proofs
   hs-source-dirs:
       test
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=LiquidHaskell -fkeep-going -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=LiquidHaskell -Wno-unused-matches -Wmissing-export-lists -fkeep-going -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , liquid-prelude
