Add proofs and fix some

--- a/liquidhaskell-proofs/package.yaml
+++ b/liquidhaskell-proofs/package.yaml
@@ -40,7 +40,7 @@ ghc-options:
 # We export nothing
 - -Wmissing-export-lists
 # Continues compiling even if we get an error
-- -fkeep-going
+# - -fkeep-going
 
 library:
   source-dirs: src
