--- a/liquidhaskell-proofs/liquidhaskell-proofs.cabal
+++ b/liquidhaskell-proofs/liquidhaskell-proofs.cabal
@@ -89,7 +89,7 @@ library
       Paths_liquidhaskell_proofs
   hs-source-dirs:
       src
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=LiquidHaskell -Wno-unused-matches -Wmissing-export-lists -fkeep-going
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=LiquidHaskell -Wno-unused-matches -Wmissing-export-lists
   build-depends:
       base >=4.7 && <5
     , liquid-prelude
@@ -103,7 +103,7 @@ test-suite liquidhaskell-proofs-test
       Paths_liquidhaskell_proofs
   hs-source-dirs:
       test
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=LiquidHaskell -Wno-unused-matches -Wmissing-export-lists -fkeep-going -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=LiquidHaskell -Wno-unused-matches -Wmissing-export-lists -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , liquid-prelude
